--- a/style.css
+++ b/style.css
@@ -26,27 +26,6 @@
      -o-transition: opacity .8s ease-out, visibility 0s linear .0s;
 }
 
-#typing-effect {
-    font-size: clamp(1.5rem, 5vw, 2.5rem); /* Responsive font size */
-    font-weight: bold;
-    white-space: wrap; /* Keeps text on one line */
-    overflow: hidden; /* Hides overflowing text */
-    border-right: 2px solid black; /* Simulates cursor */
-    display: inline-block; /* Aligns the border cursor with text */
-  }
-
-  /* Cursor blinking animation */
-  @keyframes blink-cursor {
-    50% {
-      border-color: transparent;
-    }
-  }
-
-  /* Add some animation for smoother resizing (optional) */
-  #typing-effect {
-    transition: font-size 0.3s ease;
-  }
-
 .about {
     text-align: justify;
 }
@@ -58,6 +37,12 @@
 }
 
 .experience {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.achievements {
     display: flex;
     justify-content: center;
     align-items: center;
